feat: added deep methods scan